Add functionality to disable the buttons Update and Delete in the method initialize, a method called rowSelectedInTable that enables them when a row is selected and correct fx:id and onAction for these buttons

--- a/src/userinterface/ListOfContactsView.fxml
+++ b/src/userinterface/ListOfContactsView.fxml
@@ -62,7 +62,7 @@
          </children></HBox>
       <HBox layoutX="14.0" layoutY="200.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="1350.0">
          <children>
-            <TableView fx:id="tableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="1338.0" stylesheets="@style.css">
+            <TableView fx:id="tableView" onMouseClicked="#rowSelectedInTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="1338.0" stylesheets="@style.css">
               <columns>
                 <TableColumn fx:id="firstNameColumn" prefWidth="180.0" text="First name" />
                 <TableColumn fx:id="lastNameColumn" prefWidth="180.0" text="Last name" />
@@ -75,7 +75,7 @@
       </HBox>
       <HBox layoutX="14.0" layoutY="112.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="1158.0">
          <children>
-            <Button fx:id="listAllContactsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionListAllContacts" prefHeight="45.0" prefWidth="200.0" text="Update contact">
+            <Button fx:id="updateContactButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdateContact" prefHeight="45.0" prefWidth="200.0" text="Update contact">
                <font>
                   <Font name="Impact" size="24.0" />
                </font>
@@ -83,7 +83,7 @@
                   <Insets left="640.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="listAllContactsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionListAllContacts" prefHeight="45.0" prefWidth="200.0" text="Delete contact">
+            <Button fx:id="deleteContactButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionDeleteContact" prefHeight="45.0" prefWidth="200.0" text="Delete contact">
                <font>
                   <Font name="Impact" size="24.0" />
                </font>
