--- a/src/userinterface/style.css
+++ b/src/userinterface/style.css
@@ -14,3 +14,11 @@
     -fx-font-family: "Impact";
     -fx-alignment: bottom-left;
 }
+
+
+.placeholder {
+
+    -fx-font-size: 24px;
+    -fx-font-family: "Impact";
+
+}
