--- a/src/userinterface/ContactView.fxml
+++ b/src/userinterface/ContactView.fxml
@@ -11,28 +11,40 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.ContactController">
    <children>
-      <VBox layoutX="483.0" layoutY="40.0" prefHeight="834.0" prefWidth="455.0">
+      <VBox layoutX="483.0" layoutY="40.0" prefHeight="834.0" prefWidth="791.0">
          <children>
             <Label fx:id="contactHeading" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="400.0" text="Label - Add or Update">
                <font>
                   <Font name="Impact" size="24.0" />
                </font>
             </Label>
-            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="108.0" text="First name:">
+            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="400.0" text="First name:">
                <font>
                   <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin></Label>
-            <TextField fx:id="firstNameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
-               <font>
-                  <Font name="Impact" size="24.0" />
-               </font>
+            <HBox>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
-            </TextField>
+               <children>
+                  <TextField fx:id="firstNameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
+                     <font>
+                        <Font name="Impact" size="24.0" />
+                     </font>
+                  </TextField>
+                  <Label text="(Must contain at least two characters.)">
+                     <font>
+                        <Font name="Impact" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="11.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
             <Label layoutX="10.0" layoutY="52.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="105.0" text="Last name:">
                <font>
                   <Font name="Impact" size="24.0" />
@@ -41,14 +53,26 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="lastNameField" layoutX="10.0" layoutY="84.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
-               <font>
-                  <Font name="Impact" size="24.0" />
-               </font>
+            <HBox>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
-            </TextField>
+               <children>
+                  <TextField fx:id="lastNameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
+                     <font>
+                        <Font name="Impact" size="24.0" />
+                     </font>
+                  </TextField>
+                  <Label text="(Must contain at least two characters.)">
+                     <font>
+                        <Font name="Impact" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="11.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
             <Label layoutX="10.0" layoutY="52.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="67.0" text="Phone:">
                <font>
                   <Font name="Impact" size="24.0" />
@@ -57,14 +81,26 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="phoneField" layoutX="10.0" layoutY="84.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
-               <font>
-                  <Font name="Impact" size="24.0" />
-               </font>
+            <HBox>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
-            </TextField>
+               <children>
+                  <TextField fx:id="phoneField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
+                     <font>
+                        <Font name="Impact" size="24.0" />
+                     </font>
+                  </TextField>
+                  <Label text="(Must contain at least nine characters.)">
+                     <font>
+                        <Font name="Impact" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="11.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
             <Label layoutX="10.0" layoutY="138.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="86.0" text="Address:">
                <font>
                   <Font name="Impact" size="24.0" />
@@ -73,14 +109,26 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="addressField" layoutX="10.0" layoutY="170.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
-               <font>
-                  <Font name="Impact" size="24.0" />
-               </font>
+            <HBox>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
-            </TextField>
+               <children>
+                  <TextField fx:id="addressField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
+                     <font>
+                        <Font name="Impact" size="24.0" />
+                     </font>
+                  </TextField>
+                  <Label text="(Must contain at least five characters.)">
+                     <font>
+                        <Font name="Impact" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="11.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
             <Label layoutX="10.0" layoutY="310.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="59.0" text="Email:">
                <font>
                   <Font name="Impact" size="24.0" />
@@ -89,14 +137,26 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="emailField" layoutX="10.0" layoutY="342.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
-               <font>
-                  <Font name="Impact" size="24.0" />
-               </font>
+            <HBox>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
-            </TextField>
+               <children>
+                  <TextField fx:id="emailField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
+                     <font>
+                        <Font name="Impact" size="24.0" />
+                     </font>
+                  </TextField>
+                  <Label text="(Must contain @ (at sign) and . (dot).)">
+                     <font>
+                        <Font name="Impact" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="20.0" top="11.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets top="30.0" />
